<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:layout="@layout/header_settings"
        app:title="@string/notifications_header">
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_notifications"
            app:key="pushNotifications"
            app:defaultValue="true"
            app:summaryOff="@string/push_notifications_off"
            app:summaryOn="@string/push_notifications_on"
            app:title="@string/push_notifications_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:layout="@layout/header_settings"
        app:title="@string/about_header">
        <Preference
            app:icon="@drawable/ic_developers"
            app:summary="@string/developers_summary"
            app:title="Developers" />

        <Preference
            app:icon="@drawable/ic_version"
            app:summary="@string/version_summary"
            app:title="@string/version_title" />
    </PreferenceCategory>
</PreferenceScreen>